	- deleting the contents of GlobalGroups.yml will no longer thrown a NullPointerException.
	- Removed op permissions from admins in the default GloblaGroups.yml.
v 1.8:
	- Changed ServicesManager registration to lowest from normal.
	- Fixed 'manucheckp' returning a null for the searched node when it's a group/subgroup.
	- manpromote and mandemote now correctly send the notification to the console if the command was issued there.
	- Expanded GlobalGroups.yml and Groups.yml to include Towny permissions.
	- Delayed GroupManager events so Superperms will be fully updated before plugins receive the events.
	- Changed the way events are raised to prevent variable corruption.
	- Reload GlobalGroups when you perform a world load.
	- Changed GlobalGroups to save/load before local groups in the scheduled data saving/loading
	- Fix 'manucheckp' to correctly report if a permission is available from GroupManager or Bukkit.
	- Changed over to a reflection method for populating superperms as Bukkit lags when you handle permissions one at a time.
	- Major, MAJOR changes to support partial/full world mirroring.
	  You can now mirror groups.yml, users.yml or both files between different worlds.
	- Catch NullPointerErrors generated by blank permission nodes.
	- Removed '- bukkit.command' form the globalgroups permission nodes.
v 1.9:
	- Optimize populating Bukkit perms so we no longer calculate the child nodes (Bukkit already does this).
	- Added a tidy error message for invalid permission entries in GlobalGroups.
	- Better optimize assembling of a players permissions and allow the * node to populate all registered superperms.
	- Fixed text when adding a subgroup to not say the player was moved.
	- Update to new Bukkit Event system.
	- Update GroupManagerBridge for new event system.
	- Fixed a random null error upon a player portaling.
	- Fixed infinite loop error on player join.
	- Optimized code to only update the player logging in instead of all players online.